--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,12 +46,7 @@ h2 {
 
 
 
-.correct {
-  background-color: aquamarine;
-}
-.incorrect {
-  background-color: red;
-}
+
 
 .letter {
   height: 100%;
